# Movie_Recommendation_System

./: README.md
Recommendation_System/: package-lock.json  render.yaml
Recommendation_System/backend/: .env  .gitignore  START_BACKEND.bat  main.py  pyproject.toml  requirements.txt  start_backend.py  test_auth.py
Recommendation_System/backend/App/database/: createdb.py
Recommendation_System/backend/App/models/: user_model.py
Recommendation_System/backend/App/schemas/: user_auth_schema.py
Recommendation_System/backend/app/: __init__.py
Recommendation_System/backend/app/auth/: auth.py
Recommendation_System/backend/app/config/: config.py
Recommendation_System/backend/app/database/: database.py
Recommendation_System/backend/app/models/: user_model.py
Recommendation_System/backend/app/recommendation/: recommendation.py
Recommendation_System/backend/app/recommendation_model/: movie_df.csv  movie_df.pkl  preprocessing.ipynb  recommand.py  tempCodeRunnerFile.py
Recommendation_System/backend/app/routes/: auth_route.py  history.py  recommendation.py  routes.py
Recommendation_System/backend/app/schemas/: history_schema.py  user_auth_schema.py
Recommendation_System/backend/pyenv/: pyvenv.cfg
Recommendation_System/backend/pyenv/Scripts/: activate  activate.bat
Recommendation_System/frontend/: index.html  package-lock.json  package.json  test-api.html  vite.config.js
Recommendation_System/frontend/src/: App.jsx  index.css  main.jsx
Recommendation_System/frontend/src/context/: authContext.jsx  movieContext.jsx
(+26 files in other folders)
